# WorkToJiraEffort

./: .gitignore  CONTRIBUTING.md  Cargo.toml  EMBEDDED_SCREENPIPE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MENUBAR_BUILD.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TAURI_UI.md  TROUBLESHOOTING.md  build.rs  config.example.toml  create-mac-app.sh  create_icns.py  create_ico.py  create_icons.py  install.sh  tauri.conf.json  work-to-jira-effort.service
.github/workflows/: ci.yml  release.yml
ARCHITECTURE_ANALYSIS/: 01_COMPLETE_ARCHITECTURE.md  02_LLM_INJECTION_POINTS.md  03_CODE_LOCATIONS_REFERENCE.md  04_EXECUTIVE_SUMMARY.md  05_ANNOTATED_CODE_FLOW.md  README.md
docs/: DEVELOPMENT.md  UI_COMPONENTS.md  UI_DESIGN.md
icons/: icon.icns
resources/macos/: Info.plist
src/: config.rs  daemon.rs  daemon_old.rs  database.rs  jira.rs  llm.rs  main.rs  salesforce.rs  screenpipe.rs  screenpipe_manager.rs  state.rs  tracker.rs  tracker_old.rs
ui/: app.js  dashboard.html  index.html  menubar.html  menubar.js  styles.css
