[package]
name = "work-to-jira-effort"
version = "0.1.0"
edition = "2021"
authors = ["WorkToJiraEffort Contributors"]
description = "Automatically track work time via Screenpipe and log to Jira & Salesforce"
license = "MIT"

[package.metadata.bundle]
name = "WorkToJiraEffort"
identifier = "com.worktojiraeffort.tray"
icon = []
version = "0.1.0"
resources = []
copyright = "Copyright (c) 2024 WorkToJiraEffort Contributors"
category = "Productivity"
short_description = "Automatic work time tracking for Jira"
long_description = "Automatically track work time via Screenpipe and log to Jira & Salesforce"
osx_minimum_system_version = "10.13"
osx_url_schemes = []
osx_info_plist_path = "resources/macos/Info.plist"

[dependencies]
# HTTP client for API calls
reqwest = { version = "0.12", features = ["json", "blocking"] }
# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Configuration management
config = "0.14"
toml = "0.8"
# Async runtime
tokio = { version = "1.41", features = ["full"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
env_logger = "0.11"
log = "0.4"
tracing = "0.1"
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }
# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
# Cross-platform directories
directories = "5.0"
# URL parsing
url = "2.5"

# Additional dependencies
regex = "1.12"
which = "6.0"
dirs = "5.0"
axum = { version = "0.7", features = ["macros"] }

# System tray / menubar app dependencies (optional - requires GUI libs)
tray-icon = { version = "0.18", optional = true }
image = { version = "0.25", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = { version = "0.26", optional = true }
objc = { version = "0.2", optional = true }

[features]
default = []
tray = ["dep:tray-icon", "dep:image", "dep:cocoa", "dep:objc"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[[bin]]
name = "work-to-jira-effort"
path = "src/main.rs"

[[bin]]
name = "work-to-jira-effort-tray"
path = "src/bin/tray.rs"
required-features = ["tray"]
